--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/Chaerry22/Server-Client-Project'">
+                    onclick="location.href='https://www.kaggle.com/code/danyeolchae/flower-classifier'">
                         Keras
                     </button>
                     <button 
@@ -208,11 +208,11 @@
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
-                    src="./assets/ServerProject.webp" 
+                    src="./assets/fern.jpeg" 
                     alt="Project 1" 
                     class="project-img">
                 </div>
-                <h2 class="experience-sub-title project-title">Fern Project</h2>
+                <h2 class="experience-sub-title project-title">Fractal Fern Project</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
