--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </nav>
     <section id="profile">
         <div class="section__pic-container">
-            <img src="./assets/profilepic.jpg" alt="My Profile Picture">
+            <img src="./assets/1699483405151.jpeg" alt="My Profile Picture">
         </div>
         <div class="section__text">
             <p class="section__text__p1">Hello, my name is</p>
