--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                 </div>
                 <div class="text-container">
-                    <p>Hello blabalfnaskfij </p>
+                    <p>Hello, my name is Daniel Chae. I am a junior in College studying Computer Science. I was born in Korea, raised in East Africa, and now studying in Grand Rapids Michigan at Calvin University. </p>
                 </div>
             </div>
         </div>
