--- a/index.html
+++ b/index.html
@@ -184,6 +184,23 @@
                     </button>
                 </div>
             </div>
+            <div class="details-container color-container"></div>
+                <div class="article-container">
+                    <img 
+                    src="./assets/Calendar.jpeg" 
+                    alt="Project 1" 
+                    class="project-img">
+                </div>
+                <h2 class="experience-sub-title project-title">Calendar Website Project</h2>
+                <div class="btn-container">
+                    <button 
+                    class="btn btn-color-2 project-btn" 
+                    onclick="location.href='https://github.com/Chaerry22/Caldenar'">
+                        GitHub
+                    </button>
+    
+                </div>
+            </div>
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
