--- a/index.html
+++ b/index.html
@@ -162,88 +162,93 @@
         <p class="section__text__p1">Some of my</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
-        <div class="about-containers">
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img 
-                    src="./assets/ServerProject.webp" 
-                    alt="Project 1" 
-                    class="project-img">
+            <div class="about-containers">
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/ServerProject.webp" 
+                        alt="Project 1" 
+                        class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Server Client Project</h2>
+                    <div class="btn-container">
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='https://github.com/Chaerry22/Server-Client-Project'">
+                            GitHub
+                        </button>
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='REPLACE ME'">
+                            See Project
+                        </button>
+                    </div>
                 </div>
-                <h2 class="experience-sub-title project-title">Server Client Project</h2>
-                <div class="btn-container">
-                    <button 
-                    class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/Chaerry22/Server-Client-Project'">
-                        GitHub
-                    </button>
-                    <button 
-                    class="btn btn-color-2 project-btn" 
-                    onclick="location.href='REPLACE ME'">
-                        See Project
-                    </button>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/Calendar.jpeg" 
+                        alt="Project 2"
+                        width="10rem"
+                        class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Calendar Website Project</h2>
+                    <div class="btn-container">
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='https://github.com/Chaerry22/Caldenar'">
+                            GitHub
+                        </button>
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='Calendar.html'">
+                            See Project
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/flower.jpeg" 
+                        alt="Project 3" 
+                        class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">AI/ML Flower Classifier Project</h2>
+                    <div class="btn-container">
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='https://www.kaggle.com/code/danyeolchae/flower-classifier'">
+                            Keras
+                        </button>
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='REPLACE ME'">
+                            See Project
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/fern.jpeg" 
+                        alt="Project 4" 
+                        class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Fractal Fern Project</h2>
+                    <div class="btn-container">
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='https://github.com/Chaerry22/Fern'">
+                            GitHub
+                        </button>
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='REPLACE ME'">
+                            See Project
+                        </button>
+                    </div>
                 </div>
             </div>
-            <div class="details-container color-container"></div>
-                <div class="article-container">
-                    <img 
-                    src="./assets/Calendar.jpeg" 
-                    alt="Project 1" 
-                    class="project-img">
-                </div>
-                <h2 class="experience-sub-title project-title">Calendar Website Project</h2>
-                <div class="btn-container">
-                    <button 
-                    class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/Chaerry22/Caldenar'">
-                        GitHub
-                    </button>
-    
-                </div>
-            </div>
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img 
-                    src="./assets/flower.jpeg" 
-                    alt="Project 1" 
-                    class="project-img">
-                </div>
-                <h2 class="experience-sub-title project-title">AI/ML Flower Classifier Project</h2>
-                <div class="btn-container">
-                    <button 
-                    class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://www.kaggle.com/code/danyeolchae/flower-classifier'">
-                        Keras
-                    </button>
-                    <button 
-                    class="btn btn-color-2 project-btn" 
-                    onclick="location.href='REPLACE ME'">
-                        See Project
-                    </button>
-                </div>
-            </div>
-            <div class="details-container color-container">
-                <div class="article-container">
-                    <img 
-                    src="./assets/fern.jpeg" 
-                    alt="Project 1" 
-                    class="project-img">
-                </div>
-                <h2 class="experience-sub-title project-title">Fractal Fern Project</h2>
-                <div class="btn-container">
-                    <button 
-                    class="btn btn-color-2 project-btn" 
-                    onclick="location.href='https://github.com/Chaerry22/Fern'">
-                        GitHub
-                    </button>
-                    <button 
-                    class="btn btn-color-2 project-btn" 
-                    onclick="location.href='REPLACE ME'">
-                        See Project
-                    </button>
-                </div>
-            </div>
-        </div>
         </div>
     </section>
     <section id="contact">
