--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <p class="section__text__p1">Some of my</p>
         <h1 class="title">Projects</h1>
         <div class="experience-details-container">
-            <div class="about-containers">
+            <div class="project-containers">
                 <div class="details-container color-container">
                     <div class="article-container">
                         <img 
