--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="btn-container">
                 <button 
                 class="btn resume-btn" 
-                onclick="window.open('./assets/Danyeol Chae Resume 2024-6.pdf')">
+                onclick="window.open('./assets/Resume 8-24.pdf')">
                 Resume
             <!-- Change this part in the profile section -->
                 <button 
@@ -332,6 +332,23 @@
                         <button 
                         class="btn btn-color-2 project-btn" 
                         onclick="location.href='REPLACE ME'">
+                            See Project
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container">
+                    <div class="article-container">
+                        <img 
+                        src="./assets/ItalianPizza.jpg" 
+                        alt="Project 3"
+                        width="10rem"
+                        class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Pizzaria Website Project</h2>
+                    <div class="btn-container">
+                        <button 
+                        class="btn btn-color-2 project-btn" 
+                        onclick="location.href='pizza.html'">
                             See Project
                         </button>
                     </div>
